--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   firebase_auth: ^4.15.3
   firebase_core: ^2.24.2
   google_sign_in: ^6.1.6
+  dots_indicator: ^3.0.0
+  expandable_text: ^2.3.0
 
 
 dev_dependencies:
