--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   google_sign_in: ^6.1.6
   dots_indicator: ^3.0.0
   expandable_text: ^2.3.0
+  provider: ^6.1.1
 
 
 dev_dependencies:
