--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,6 +68,7 @@ flutter {
 
 dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
-    //compile 'com.facebook.android:facebook-applinks:[4,5)'
-
+    implementation 'com.facebook.android:facebook-login:latest.release'
+    implementation (platform("com.google.firebase:firebase-bom:32.7.0"))
+    implementation 'com.google.firebase:firebase-auth'
 }
