--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   dots_indicator: ^3.0.0
   expandable_text: ^2.3.0
   provider: ^6.1.1
+  flutter_facebook_auth: ^5.0.11
 
 
 dev_dependencies:
