--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = ez_build
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.ezBuild
+PRODUCT_BUNDLE_IDENTIFIER = com.hexagone.ezbuild
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
