--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   expandable_text: ^2.3.0
   provider: ^6.1.1
   flutter_facebook_auth: ^5.0.11
+  http: ^0.13.6
 
 
 dev_dependencies:
