--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   provider: ^6.1.1
   flutter_facebook_auth: ^5.0.11
   http: ^0.13.6
+  geolocator: ^10.1.0
+  geocoding: ^2.1.1
+  image_picker: ^1.0.5
 
 
 dev_dependencies:
