--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   geolocator: ^10.1.0
   geocoding: ^2.1.1
   image_picker: ^1.0.5
+  cloud_firestore: ^4.13.6
 
 
 dev_dependencies:
