--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   geocoding: ^2.1.1
   image_picker: ^1.0.5
   cloud_firestore: ^4.13.6
+  firebase_messaging: ^14.7.10
+  firebase_storage: ^11.6.0
+  cached_network_image: ^3.3.1
 
 
 dev_dependencies:
