--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_messaging: ^14.7.10
   firebase_storage: ^11.6.0
   cached_network_image: ^3.3.1
+  url_launcher: ^6.2.3
 
 
 dev_dependencies:
